Added voice recognition

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,6 @@ steps:
 
 
 - task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(System.DefaultWorkingDirectory)/build.zip' 
+    artifactName: 'build' 
