--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/js-cookie": "^2.2.0",
     "@types/react-router-dom": "^4.3.1",
     "js-cookie": "^2.2.0",
+    "msr": "^1.3.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-responsive-modal": "^3.5.1",
