--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: false
+    archiveFile: '$(System.DefaultWorkingDirectory)/build.zip'
 
 
 - task: PublishBuildArtifacts@1
